# yoink

./: .gitignore  CNAME  Cargo.toml  README.md  action.yml  brewx  index.html  llms.txt  publish-release.sh
.github/workflows/: cd.vx.yml  tests.yml  update-index.yml
src/: lib.rs  main.rs
tests/: install.rs
x/: index.html
