[package]
name = "yoink"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
bzip2 = "0.4"
dirs-next = "2"
fs2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
serial_test = "3"
